[package]
name = "pygo"
version = "0.0.1"
authors = ["cowboy8625 <cowboy8625@yahoo.com>"]
edition = "2018"
description = "Cargo like program for Python"
readme = "README.md"
repository = "https://github.com/cowboy8625/pygo"
license-file = "LICENSE"
keywords = ["python", "project", "manager"]
categories = ["command-line-utilities"]

[dependencies]

[dependencies.clap]
version = "~2.33.3"
default-features = false
features = [ "suggestions", "color" ]
