[package]
name = "pygo"
version = "0.1.0"
authors = ["cowboy8625 <cowboy8625@yahoo.com>"]
edition = "2021"
description = "Cargo like program for Python"
readme = "README.md"
repository = "https://github.com/cowboy8625/pygo"
license-file = "LICENSE"
keywords = ["python", "project", "manager"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
anyhow = "1.0.70"

[dependencies.clap]
version = "~2.33.3"
default-features = false
features = [ "suggestions", "color" ]
